[project]
name = "langgrph-push"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "display>=1.0.0",
    "gradio>=6.12.0",
    "ipython>=9.12.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
]
